[gd_scene load_steps=2 format=3 uid="uid://c6aqg0xqk0y7x"]

[ext_resource type="Script" path="res://scripts/ui/ModernUI.gd" id="1_wvaqf"]

[node name="ModernUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wvaqf")

[node name="InfoDisplay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StatsPanelContainer" type="PanelContainer" parent="InfoDisplay"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -270.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 180.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="InfoDisplay/StatsPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="StatsLabel" type="RichTextLabel" parent="InfoDisplay/StatsPanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "System Status
  Step: 0
  FPS: 0.0
  Zoom: x1.0
  Probes: 0 / 0
  Resources: 0
  Mined: 0.0
  Messages: 0"
fit_content = true
autowrap_mode = 0

[node name="ProbeDetailsPanelContainer" type="PanelContainer" parent="InfoDisplay"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -270.0
offset_top = 190.0
offset_right = -20.0
offset_bottom = 420.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="InfoDisplay/ProbeDetailsPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="ProbeDetailsLabel" type="RichTextLabel" parent="InfoDisplay/ProbeDetailsPanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Probe Details (ID: -1)
  Energy: 0.0 / 0
  Position: (0, 0)
  Velocity: (0.0, 0.0) Mag: 0.0
  Angle: 0.0Â°
  Generation: 0
  Target: None
  Mining: No
  Status: N/A"
fit_content = true
autowrap_mode = 0

[node name="ProbeSelection" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ProbeListPanelContainer" type="PanelContainer" parent="ProbeSelection"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -240.0
offset_right = 270.0
offset_bottom = -20.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="ProbeSelection/ProbeListPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ProbeList" type="ItemList" parent="ProbeSelection/ProbeListPanelContainer/MarginContainer"]
layout_mode = 2
allow_reselect = true
auto_height = true